--- a/style/style.css
+++ b/style/style.css
@@ -476,6 +476,17 @@ header .header-right img {
   font-family: "Georgia";
   color: #606060;
   font-style: italic;
+  position: relative;
+}
+
+.search-category:before {
+  position: absolute;
+  content: "";
+  height: 1.5px;
+  width: 100%;
+  background-color: #303030;
+  bottom: -4px;
+  left: 0;
 }
 
 .search-size {
@@ -484,6 +495,17 @@ header .header-right img {
   font-family: "Georgia";
   color: #606060;
   font-style: italic;
+  position: relative;
+}
+
+.search-size:before {
+  position: absolute;
+  content: "";
+  height: 1.5px;
+  width: 100%;
+  background-color: #303030;
+  bottom: -4px;
+  left: 0;
 }
 
 .search-cost {
@@ -492,6 +514,17 @@ header .header-right img {
   font-family: "Georgia";
   color: #606060;
   font-style: italic;
+  position: relative;
+}
+
+.search-cost:before {
+  position: absolute;
+  content: "";
+  height: 1.5px;
+  width: 100%;
+  background-color: #303030;
+  bottom: -4px;
+  left: 0;
 }
 
 .goods {
@@ -553,6 +586,7 @@ header .header-right img {
   margin: 3px;
   color: white;
   background-color: #303030;
+  cursor: pointer;
 }
 
 .pages div.pages-now {
@@ -593,6 +627,7 @@ footer > div div {
 footer > div div a {
   text-decoration: none;
   color: #b2b2b2;
+  line-height: 1.917;
 }
 
 footer .footer-center {
@@ -605,6 +640,7 @@ footer .footer-center {
 
 footer .footer-center > div {
   margin: 0 auto;
+  line-height: 1.917;
 }
 
 footer .footer-right {
@@ -615,5 +651,39 @@ footer .footer-right {
 
 footer .footer-right > div {
   margin: 0 auto;
+}
+
+footer .footer-right > div > div {
+  color: #b2b2b2;
+  line-height: 1.917;
+}
+
+footer .footer-right > div > div > div {
+  -webkit-box-orient: initial;
+  -webkit-box-direction: initial;
+      -ms-flex-direction: initial;
+          flex-direction: initial;
+  margin-top: 23px;
+}
+
+footer .footer-right > div > div > div .twitter {
+  background: url(/images/icons/twitter.png) center center/contain no-repeat;
+  width: 33px;
+  height: 33px;
+  margin-right: 15px;
+}
+
+footer .footer-right > div > div > div .facebook {
+  background: url(/images/icons/facebook.png) center center/contain no-repeat;
+  width: 33px;
+  height: 33px;
+  margin-right: 15px;
+}
+
+footer .footer-right > div > div > div .instagram {
+  background: url(/images/icons/instagram.png) center center/contain no-repeat;
+  width: 33px;
+  height: 33px;
+  margin-right: 15px;
 }
 /*# sourceMappingURL=style.css.map */
