--- a/styles/style.css
+++ b/styles/style.css
@@ -346,7 +346,6 @@ template {
     =====================================_Начало_===================================================
 */
 body {
-  max-width: 1550px;
   background-color: #e5e5e5;
   padding: 61px 0;
   -webkit-box-sizing: border-box;
@@ -419,7 +418,8 @@ header .header-right .user {
   margin-right: 56px;
 }
 
-header .header-right .user span {
+header .header-right .user a {
+  text-decoration: none;
   color: #ffa200;
 }
 
