--- a/styles/style.scss
+++ b/styles/style.scss
@@ -388,7 +388,6 @@ $border_card: #d3d3d3;
 }
 
 body {
-    max-width: 1550px;
     background-color: #e5e5e5;
     padding: 61px 0;
     box-sizing: border-box;;
@@ -435,7 +434,8 @@ header {
             text-align: center;
             margin-right: 56px;
 
-            span {
+            a {
+                text-decoration: none;
                 color: #ffa200;
             }
         }
