--- a/styles/basket.css
+++ b/styles/basket.css
@@ -1,1 +1,181 @@
-/* No CSS *//*# sourceMappingURL=basket.css.map */
+@charset "UTF-8";
+.h1 {
+  font-size: 36px;
+  text-align: center;
+  color: #303030;
+  text-transform: uppercase;
+  font-family: "Myriad Pro";
+  margin: 121px 0 0 0;
+}
+
+.paragraph {
+  color: #606060;
+  text-align: center;
+  font-size: 20px;
+  margin: 10px auto 96px auto;
+}
+
+.goods__title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  border-bottom: 2px solid #e5e5e5;
+}
+
+.goods__title-left {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-left: 10px;
+}
+
+.goods__title-right {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.goods__title-text {
+  font-size: 12px;
+  font-family: "Myriad Pro";
+  color: #909090;
+  text-transform: uppercase;
+  text-align: left;
+  margin-bottom: 10px;
+}
+
+.goods__title-text_margin-left {
+  margin-left: 94px;
+}
+
+.goods__title-text_margin_36 {
+  margin-left: 53px;
+  margin-right: 36px;
+}
+
+.goods__title-text_margin_53 {
+  margin-right: 53px;
+}
+
+.goods__title-text_margin_10 {
+  margin-right: 10px;
+}
+
+/*      /----------------------------------\
+        |    Оформление карточек goods     |
+        \----------------------------------/
+*/
+.goods__block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 19px 13px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin-right: 10px;
+  border-bottom: 2px solid #e5e5e5;
+}
+
+.goods__block-left {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.goods__block-photo {
+  background: center / contain no-repeat;
+  background-image: url(/images/catalog-img/1.jpg);
+  border: 1px solid #e5e5e5;
+  background-color: #f7f7f7;
+  width: 98px;
+  height: 98px;
+}
+
+.goods__block-title {
+  margin-left: 24px;
+}
+
+.good__title-description {
+  font-size: 15px;
+  font-weight: 600;
+  font-family: "Myriad Pro";
+  color: #303030;
+  text-transform: uppercase;
+}
+
+.good__title-article {
+  font-size: 13px;
+  font-weight: 400;
+  font-family: "Myriad Pro";
+  color: #606060;
+}
+
+.goods__block-right {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.goods__size {
+  font-size: 14px;
+  font-family: "Lato";
+  color: #303030;
+  text-transform: uppercase;
+}
+
+.goods__quantity {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0 74px 0 96px;
+  font-size: 14px;
+  font-family: "Lato";
+  color: #303030;
+  text-transform: uppercase;
+}
+
+.goods__quantity-sign {
+  margin-left: 9px;
+}
+
+.goods__quantity-sign-value {
+  color: white;
+  background-color: black;
+  cursor: pointer;
+  padding: 3px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin: 3px;
+}
+
+.goods__price {
+  font-size: 14px;
+  font-family: "Myriad Pro";
+  color: #303030;
+  text-transform: uppercase;
+}
+
+.goods__delete {
+  font-size: 30px;
+  font-family: "Lato";
+  color: #303030;
+  text-transform: uppercase;
+  margin-left: 76px;
+  cursor: pointer;
+}
+/*# sourceMappingURL=basket.css.map */
