--- a/styles/goods.css
+++ b/styles/goods.css
@@ -1,1 +1,28 @@
-/* No CSS *//*# sourceMappingURL=goods.css.map */
+.main {
+  text-align: center;
+}
+
+.goods-photo {
+  background: center/contain no-repeat;
+  background-image: url(/images/catalog-img/1.jpg);
+  height: 50vh;
+  width: 100%;
+}
+
+.add-to-basket {
+  background-color: #f68236;
+  color: white;
+  width: 175px;
+  margin: 50px auto;
+  text-transform: uppercase;
+  font-family: "Myriad Pro";
+  font-size: 14px;
+  padding: 18px 25px;
+  cursor: pointer;
+}
+
+.add-to-basket:active {
+  background-color: white;
+  color: #f68236;
+}
+/*# sourceMappingURL=goods.css.map */
