--- a/styles/index.css
+++ b/styles/index.css
@@ -1,1 +1,388 @@
-/* No CSS *//*# sourceMappingURL=index.css.map */
+@charset "UTF-8";
+/* 
+    /----------------------------\
+    |  Оформление section header |
+    \----------------------------/
+*/
+.section-header {
+  margin: 150px 0 49px 0;
+}
+
+.section-header__h1 {
+  font-size: 60px;
+  font-family: "Myriad Pro";
+  font-weight: 500;
+  color: #303030;
+  text-transform: uppercase;
+  line-height: 0.596;
+  text-align: center;
+  margin-bottom: 35px;
+}
+
+.section-header__paragraph {
+  font-size: 24px;
+  font-family: "Georgia";
+  color: #606060;
+  font-style: italic;
+  line-height: 1.455;
+  text-align: center;
+  margin-bottom: 68px;
+}
+
+.section-header__button {
+  border: 1px solid #959595;
+  width: 227px;
+  height: 58px;
+  margin: 0 auto;
+  font-size: 14px;
+  font-family: "Myriad Pro";
+  color: #303030;
+  text-transform: uppercase;
+  line-height: 58px;
+  text-align: center;
+  cursor: pointer;
+}
+
+/* 
+    /----------------------------\
+    |   Оформление section pic   |
+    \----------------------------/
+*/
+.flex-column {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.section-pic {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.section-pic__block {
+  width: 25%;
+  max-height: 840px;
+}
+
+.section-pic__one-one {
+  background: center/cover no-repeat;
+  background-image: url("/images/1.jpg");
+  height: 560px;
+}
+
+.section-pic__one-one p {
+  font-size: 24px;
+  font-family: "Myriad Pro";
+  color: white;
+  text-transform: uppercase;
+  text-align: center;
+  margin: 9px 0;
+}
+
+.section-pic__one-one .arrival {
+  font-style: italic;
+  font-weight: 300;
+}
+
+.section-pic__one-two {
+  background: center/cover no-repeat;
+  background-image: url("/images/5.jpg");
+  height: 280px;
+}
+
+.section-pic__two-one {
+  background: #bbbbbb;
+  height: 280px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 0 25px;
+}
+
+.section-pic__two-one p {
+  font-size: 14px;
+  font-family: "Georgia";
+  color: white;
+  font-style: italic;
+  line-height: 1.357;
+  text-align: center;
+  margin: 0;
+}
+
+.symbol {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-bottom: 20px;
+}
+
+.symbol .symbol__line {
+  height: 1px;
+  width: 30px;
+  background-color: white;
+}
+
+.symbol .symbol__block {
+  height: 44px;
+  width: 44px;
+  border-radius: 50%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border: 2px solid white;
+  color: white;
+  text-align: center;
+  line-height: 44px;
+  font-size: 30px;
+  margin: 0 8px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.symbol .symbol__block-line {
+  height: 20px;
+  width: 4px;
+  border-radius: 2px;
+  background-color: white;
+}
+
+.symbol .symbol__block-dot {
+  height: 4px;
+  width: 4px;
+  border-radius: 50%;
+  background-color: white;
+  margin: 3px 0;
+}
+
+.section-pic__two-two {
+  background: center/cover no-repeat;
+  background-image: url("/images/2.jpg");
+  height: 280px;
+  font-size: 24px;
+  font-family: "Myriad Pro";
+  color: white;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.section-pic__two-two div {
+  font-size: 20px;
+  font-family: "Myriad Pro";
+  font-style: italic;
+  font-weight: 300;
+  text-transform: lowercase;
+}
+
+.section-pic__two-two div span {
+  vertical-align: 3px;
+  font-size: 16px;
+}
+
+.section-pic__two-three {
+  background: #606060;
+  height: 280px;
+}
+
+.section-pic__two-three div:first-child {
+  font-size: 40px;
+}
+
+.section-pic__two-three div {
+  font-size: 24px;
+  font-family: "Myriad Pro";
+  color: white;
+  text-transform: uppercase;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.section-pic__three-one {
+  background: center/cover no-repeat;
+  background-image: url("/images/64.jpg");
+  height: 280px;
+}
+
+.section-pic__three-two {
+  background: #bbbbbb;
+  height: 280px;
+  padding: 0 25px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-size: 14px;
+  font-family: "Georgia";
+  color: white;
+  font-style: italic;
+  line-height: 1.357;
+  text-align: center;
+}
+
+.section-pic__three-three {
+  background: center/cover no-repeat;
+  background-image: url("/images/7.jpg");
+  height: 280px;
+  position: relative;
+}
+
+.section-pic__three-three:before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  background-color: rgba(0, 0, 0, 0.267);
+  z-index: 1;
+}
+
+.section-pic__three-three div {
+  font-size: 24px;
+  font-family: "Myriad Pro";
+  color: white;
+  text-transform: uppercase;
+  line-height: 1.125;
+  text-align: center;
+  z-index: 2;
+}
+
+.section-pic__three-three p {
+  font-size: 18px;
+  font-style: oblique;
+  font-family: "Myriad Pro";
+  color: white;
+  z-index: 2;
+}
+
+.section-pic__three-three p span {
+  vertical-align: 3px;
+  font-size: 15px;
+}
+
+.section-pic__four-one {
+  background: #606060;
+  height: 280px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 25px;
+  font-size: 24px;
+  font-family: "Myriad Pro";
+  color: white;
+  text-transform: uppercase;
+  line-height: 1.125;
+  text-align: center;
+}
+
+.section-pic__four-one div:first-child {
+  font-size: 40px;
+}
+
+.section-pic__four-one p {
+  font-size: 20px;
+  font-weight: 300;
+  font-style: italic;
+}
+
+.section-pic__four-two {
+  background: center/cover no-repeat;
+  background-image: url("/images/4.jpg");
+  height: 560px;
+}
+
+.section-pic__four-two p {
+  font-size: 24px;
+  font-family: "Myriad Pro";
+  color: white;
+  text-transform: uppercase;
+  text-align: center;
+  margin: 9px 0;
+}
+
+.section-pic__four-two .arrival {
+  font-style: italic;
+  font-weight: 300;
+}
+
+/* 
+    /----------------------------\
+    |   Оформление section sign  |
+    \----------------------------/
+*/
+.section-sign {
+  margin: 230px 0 250px 0;
+}
+
+.h2 {
+  font-size: 36px;
+  font-family: "Myriad Pro";
+  color: #303030;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.section-sign__text {
+  font-size: 18px;
+  font-family: "Georgia";
+  color: #606060;
+  font-style: italic;
+  text-align: center;
+}
+
+.form {
+  margin-top: 54px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.form input {
+  border: 1px solid #959595;
+  width: 450px;
+  height: 54px;
+  font-size: 14px;
+  font-family: "Myriad Pro";
+  color: #606060;
+  line-height: 3.071;
+  text-align: left;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 3px 20px;
+  outline: none;
+}
+
+.form .submit {
+  background-color: #f68236;
+  border: none;
+  cursor: pointer;
+  color: white;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+/*# sourceMappingURL=index.css.map */
